Fixed problem with z-index

--- a/css/media.css
+++ b/css/media.css
@@ -18,6 +18,7 @@
     .nav .nav_items{
       display: none;
       position: fixed;
+	  z-index:2;
       top: 0;
       left: 0;
       background-color: rgba(0,0,0, .9);
